# bitcoin-hall

./: .gitignore  .travis.yml  README.md  bitcoin-hall.cabal  package.yaml
src/Fathens/Bitcoin/Binary/: Base58.hs  Hash.hs  Hex.hs  Num.hs
src/Fathens/Bitcoin/Wallet/: Address.hs  Keys.hs
test/Fathens/Bitcoin/Binary/: Base58Spec.hs  HashSpec.hs  NumSpec.hs
test/Fathens/Bitcoin/Wallet/: AddressSpec.hs  KeysSpec.hs
