name:                bitcoin-hall
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sawatani/bitcoin-hall#readme
license:             GPL-3
license-file:        LICENSE
author:              Kunio SAWATANI
maintainer:          devel@fathens.org
copyright:           fathens.org
category:            Bitcoin, Finance
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Fathens.Bitcoin.Binary.Base58
                       Fathens.Bitcoin.Binary.Num
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , binary >= 0.8.3.0
                     , bytestring >= 0.10.8.1
                     , text >= 1.2.2.1

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base
                     , bitcoin-hall
                     , hspec >= 2.4.3
                     , text >= 1.2.2.1

executable hw
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base, bitcoin-hall
